src/component/ZiltagMap/index.css
.ziltag-ziltag-map {
  position: relative;
  width: 510px;
  height: 340px;
  cursor: pointer;
}

.ziltag-ziltag-map__src {
  display: block;
}

.ziltag-ziltag-map__prompt {
  display: flex;
  width: 146px;
  height: 27px;
  align-items: center;
  justify-content: center;
  background: rgba(0, 0, 0, .54);
  font-family: Roboto, GillSans, Calibri, Trebuchet, sans-serif;
  font-size: 14px;
  color: white;
}

.ziltag-ziltag-map .ziltag-ziltag-map__src,
.ziltag-ziltag-map__prompt,
.ziltag-ziltag-map__container {
  position: absolute;
  left: 0;
  right: 0;
  margin: auto;
}

.ziltag-ziltag-map .ziltag-ziltag-map__src {
  z-index: 0;
}

.ziltag-ziltag-map .ziltag-ziltag-map__prompt {
  z-index: 2;
}

.ziltag-ziltag-map .ziltag-ziltag-map__container {
  z-index: 1;
}


.ziltag-ziltag-map__container .ziltag-ziltag {
  position: absolute;
}

